namespace LibraryApp.Domain.Enums
{
    public enum UserRole
    {
        User,

        Admin
    }
}